# stmaryosevents

./: .env.sample  .gitignore  .mdlrc  .pre-commit-config.yaml  Makefile  README.md  config.yml  create_recurring.py  pyproject.toml  requirements.txt
