[project]
name = "stmaryosevents"
description = "A tool to help push events to the stmaryos.org.uk site"
readme = "README.md"
version = "2026.01.1"
authors = [
  {email = "simon@sthompson.org.uk", name = "Simon Thompson"},
]

requires-python = ">= 3.11"

dependencies = [
  "python-dotenv>=1.2.1",
  "pendulum>=3.1.0",
  "PyYAML>=6.0.3",
  "requests>=2.32.5",
  "rich>=14.2.0",
  "typer>=0.21.1",
]

[project.scripts]
create_recurring = "create_recurring:cli"

[dependency-groups]
lint = [
    "deptry>=0.24.0",
    "ruff>=0.14.13",
    "pre-commit>=4.5.1",
    "pretty-toml-sort>=0.0.3",
    "typos>=1.42.1",
    "validate-pyproject>=0.24.1",
]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
# turn on unstable rules (like CPY)
preview = true
extend-select = [
  "ANN", # type annotations
  "B", # flake8-bugbear
  "Q", # flake8-quotes
  "I", # isort (in black mode)
  "D", # docstr
  "CPY", # flake8-copyright
  "PL", # pylint
  "NPY", # numpy
  "T20", # no print
  "UP", # upgrade Python styles
]
# PLR0911 = return statements
extend-ignore = [
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments in function definition
  "PLR0917", # Too many positional arguments
]

[tool.ruff.lint.pylint]
max-statements = 80

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.licensecheck]
using = "PEP631:lint"
fail_licenses = ["GPL"]
zero = true
